# KinfuRemake-Realsense2Basic

./: README.md
kinfu_remake-master2/: CMakeLists.txt
kinfu_remake-master2/apps/: CMakeLists.txt  demo.cpp
kinfu_remake-master2/kfusion/: CMakeLists.txt
kinfu_remake-master2/kfusion/include/io/: capture.hpp
kinfu_remake-master2/kfusion/src/: capture.cpp  core.cpp  kinfu.cpp
kinfu_remake-master2/kfusion/src/cuda/: device.hpp  temp_utils.hpp  tsdf_volume.cu
